# joidy

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_MODEL.md  LICENSE  Makefile  README.md  REPORT.md  SECURITY.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_goal_update.py  fix_goals.py  joidy.db  joidy.service  patch_analytics.js  pyproject.toml  start.ps1  test2.py  test_streak.py  test_tags.js  test_week.js  test_week2.js  update_main.py  update_routers.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  (+2 more)
ai-service/: Dockerfile  circuit_breaker.py  config.py  cost_tracker.py  database.py  gemini_client.py  logging_config.py  main.py  rate_limiter.py  requirements.txt
api/: Dockerfile  alembic.ini  config.py  database.py  logging_config.py  main.py  repositories.py  requirements.txt  seed_data.py
aur/: .SRCINFO  PKGBUILD
docs/: ai-service.md  api.md  architecture.md  configuration.md  database.md  development.md  frontend.md  gamification.md  index.md  realtime-security.md  troubleshooting.md  worker.md
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
joidy-cli/: package.json
scratch/: api_load_test.py  backfill_streaks.py  fill.sh
scripts/: fix-permissions.sh  install.sh  joidy_startup.sh
worker/: Dockerfile  config.py  logging_config.py  main.py  requirements.txt
(+202 files in other folders)
